--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,11 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <flume.version>1.5.2</flume.version>
-    <junit.version>4.12</junit.version>
-    <rabbitmq.version>3.4.2</rabbitmq.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <flume.version>1.5.2</flume.version>
+    <junit.version>4.11</junit.version>
+    <powermock.version>1.6.0</powermock.version>
+    <rabbitmq.version>3.4.2</rabbitmq.version>
   </properties>
 
   <licenses>
@@ -49,6 +50,24 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>3.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-easymock</artifactId>
+      <version>${powermock.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
