Update config for testing

--- a/conf/flume.conf
+++ b/conf/flume.conf
@@ -18,10 +18,18 @@ a1.sources.r1.interceptors.i1.preserveExisting = true
 # Describe/configure the sink
 a1.sinks.k1.type = hdfs
 a1.sinks.k1.channel = c1
-a1.sinks.k1.hdfs.path = /flume/events/%y/%m/%d/%H/%{routing-key}/%{type}
+a1.sinks.k1.hdfs.path = /flume/events/%Y/%m/%d/%H/%{routing-key}/%{type}
 a1.sinks.k1.hdfs.round = true
 a1.sinks.k1.hdfs.roundValue = 10
 a1.sinks.k1.hdfs.roundUnit = minute
+a1.sinks.k1.hdfs.writeFormat = Text
+a1.sinks.k1.hdfs.fileType = DataStream
+a1.sinks.k1.hdfs.rollInterval = 60
+a1.sinks.k1.hdfs.rollCount = 0
+a1.sinks.k1.hdfs.rollSize = 0
+a1.sinks.k1.hdfs.batchSize = 50000
+a1.sinks.k1.hdfs.fileSuffix = .txt
+a1.sinks.k1.hdfs.filePrefix = events
 
 # Use a channel which buffers events in memory
 a1.channels.c1.type = memory
