Move the counter setup to the configuration step

--- a/conf/flume.conf
+++ b/conf/flume.conf
@@ -16,7 +16,7 @@ a1.sources.r1.interceptors.i1.preserveExisting = true
 # Describe/configure the sink
 a1.sinks.k1.type = hdfs
 a1.sinks.k1.channel = c1
-a1.sinks.k1.hdfs.path = /flume/events/%Y/%m/%d/%H/%{routing-key}/%{type}
+a1.sinks.k1.hdfs.path = /flume/events/%Y/%m/%d/%H/%{routing-key}/%{host}
 a1.sinks.k1.hdfs.round = true
 a1.sinks.k1.hdfs.roundValue = 10
 a1.sinks.k1.hdfs.roundUnit = minute
