--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.aweber</groupId>
   <artifactId>rabbitmq-flume-plugin</artifactId>
-  <version>1.0.3-customheaders-0.1</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>rabbitmq-flume-plugin</name>
