--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ jdk:
 - oraclejdk7
 - openjdk6
 after_success:
+  - bash <(curl -s https://codecov.io/bash)
+before_deploy:
    mvn package
 deploy:
   provider: releases
